@@ -1,5 +1,7 @@
 2008-02-23  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-bin.c, test/test_bin.rb: added tests for clock_provider.
+
 	* src/rbgst-bin.c, test/test_bin.rb: added tests for
 	provided_clock{,=}.
 
